bk_ida/gobmkida/g3/gg_srand
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/gg_srand/src/utils/random.c:590:33: error: use of undeclared identifier 'unk_BB8F84'
while ( v1 != ( unsigned int *)&unk_BB8F84 ); 
                                ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/gg_srand/src/obj/5/random.o] Error 1
